--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <!-- My Expertise End -->
        
         <!--? Gallery Area Start -->
-        <div class="gallery-area section-padding40">
+	<!-- <div class="gallery-area section-padding40">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -293,7 +293,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -- >
         <!-- Gallery Area End -->
     </main>
     <footer>
